tests/snapshots/files__max-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20 30
@main(v0: int, v1: int) {
.b2_:
  v3_: int = smax v1 v0;
  print v3_;
  ret;
}
