tests/snapshots/files__mem_loop_redundant_load-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: bool) {
  v2: int = const 3;
  v5: ptr<int> = alloc v2;
  v8: int = const 1;
  v10: ptr<int> = ptradd v5 v8;
  v14: int = const 2;
  v16: ptr<int> = ptradd v5 v14;
  v19: ptr<int> = id v10;
  v20: ptr<int> = id v5;
  v21: ptr<int> = id v16;
  v22: bool = id v0;
.__24__:
  v19: ptr<int> = id v20;
  v20: ptr<int> = id v19;
  v21: ptr<int> = id v21;
  v22: bool = id v22;
  br v22 .__24__ .__32__;
.__32__:
  v35: int = const 20;
  v38: int = const 10;
  store v20 v38;
  store v21 v35;
  v43: int = load v20;
  print v43;
  free v19;
}
