tests/snapshots/files__mem_simple_store_forwarding-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 2;
  v2_: ptr<int> = alloc c1_;
  c3_: int = const 10;
  c4_: int = const 1;
  v5_: ptr<int> = ptradd v2_ c4_;
  c6_: int = const 20;
  store v2_ c3_;
  store v5_ c6_;
  v7_: int = load v2_;
  print c3_;
  free v2_;
}
