tests/snapshots/files__min-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20 30
@main(v0: int, v1: int) {
.b2_:
  v3_: bool = lt v0 v1;
  v4_: int = id v1;
  br v3_ .b5_ .b6_;
.b5_:
  v4_: int = id v0;
.b6_:
  print v4_;
}
